...
          "title": "Viaplay - Streama TV, Serier, Film och Sport online",
          "description": "Hyr filmer på nätet och se live sport som fotboll och Premier League. Viaplay har alla TV serier och kanaler online.",
            "_links": {
                 "viaplay:sections": [
                    {
                      "id": "35bb8a90-d40e-11e2-8b8b-0800200c9a66",
                      "title": "Serier",
                      "href": "https://content.viaplay.com/ios-se/serier{?productsPerPage}",
                      "type": "vod",
                      "sectionSort": 1,
                      "name": "series",
                      "templated": true
                    },
...
